// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`STextarea.vue can be invalid 1`] = `
<slabel-stub label="textarea" for="textarea">
  <div class="textarea__container"><textarea id="textarea" name="textarea" placeholder="" required="required" rows="10" class="textarea textarea--invalid"></textarea>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`STextarea.vue can be required 1`] = `
<slabel-stub label="textarea" for="textarea">
  <div class="textarea__container"><textarea id="textarea" name="textarea" placeholder="" required="required" rows="10" class="textarea"></textarea>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`STextarea.vue can have a placeholder 1`] = `
<slabel-stub label="textarea" for="textarea">
  <div class="textarea__container"><textarea id="textarea" name="textarea" placeholder="some placeholder" required="required" rows="10" class="textarea"></textarea>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`STextarea.vue can have an icon on the left 1`] = `
<slabel-stub label="textarea" for="textarea">
  <div class="textarea__container"><textarea id="textarea" name="textarea" placeholder="" required="required" rows="10" class="textarea textarea--has-icon-left"></textarea>
    <sicon-stub icon="activity" iconcolor="green" iconsize="" class="textarea__icon textarea__icon--left"></sicon-stub>
    <!---->
  </div>
</slabel-stub>
`;

exports[`STextarea.vue can have an icon on the right 1`] = `
<slabel-stub label="textarea" for="textarea">
  <div class="textarea__container"><textarea id="textarea" name="textarea" placeholder="" required="required" rows="10" class="textarea textarea--has-icon-right"></textarea>
    <!---->
    <sicon-stub icon="activity" iconcolor="green" iconsize="" class="textarea__icon textarea__icon--right"></sicon-stub>
  </div>
</slabel-stub>
`;

exports[`STextarea.vue can set each icon color 1`] = `
<slabel-stub label="textarea" for="textarea">
  <div class="textarea__container"><textarea id="textarea" name="textarea" placeholder="" required="required" rows="10" class="textarea"></textarea>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;

exports[`STextarea.vue renders correctly 1`] = `
<slabel-stub label="textarea" for="textarea">
  <div class="textarea__container"><textarea id="textarea" name="textarea" placeholder="" required="required" rows="10" class="textarea"></textarea>
    <!---->
    <!---->
  </div>
</slabel-stub>
`;
